deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app-deployment
spec:
  selector:
    matchLabels:
      app: spring-boot-app
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
      - name: spring-boot-app
        image: quay.io/cata0nana/oc_v1_img:latest
        ports:
        - containerPort: 9001
